<resources>
    <string name="app_name" translatable="false">metarmac</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_map" translatable="false">Map</string>
    <string name="title_infos" translatable="false">Infos</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoibmFzcmViIiwiYSI6ImNrdWN0ZzNzeDBmZW8ycXJ2YjN4NXpyeHYifQ.MHSkhhI24J21XEhCn2PG_w</string>
    <string name="add_airport">add airport</string>
    <string name="oaci_input">Enter OACI code...</string>
    <string name="no_airport">No airport to display. Add one in homepage to get its METAR/TAF data</string>
    <string name="airport">Airport</string>
    <string name="country">Country</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="no_code_err">Empty OACI code</string>
    <string name="oaci_unknown">Unknown OACI code</string>
    <string name="observation_time">observation time :</string>
    <string name="temperature">temperature :</string>
    <string name="latitude_infos">latitude :</string>
    <string name="longitude_infos">longitude :</string>
    <string name="dewpoint">dewpoint :</string>
    <string name="wind_direction">wind direction :</string>
    <string name="wind_speed">wind speed :</string>
    <string name="visibility">visibility :</string>
    <string name="pressure">pressure :</string>
    <string name="clouds">clouds :</string>
    <string name="forecast_start">forecast from :</string>
    <string name="forecast_end">to :</string>
    <string name="forecast_type">type :</string>
    <string name="weather">weather :</string>
    <string name="clouds_at"> at </string>
    <string name="no_taf">No TAF data available for this airport</string>
    <string name="no_metar">No METAR data available for this airport</string>
    <string name="forecast">Forecast n°</string>
    <string name="missing_data">no data available</string>
    <string name="satellite">satellite</string>
    <string name="plan">plan</string>
</resources>